# sercureclaw

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  Dockerfile.assess  Dockerfile.dev  Dockerfile.skills  GITHUB_SECRETS.md  INTEGRATION_TESTS_SUMMARY.md  LICENSE  README.md  SECURITY.md  WINDOWS_DEPLOYMENT.md  docker-compose.dev.yml  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup-windows-deployment.ps1  sitemap.xml  start.ps1  status.ps1  stop.ps1
.github/: CODEOWNERS
.github/workflows/: ci.yml  codeql.yml  docs.yml
ARCHITECTURE/: index.html
CI_CD/: index.html
COMMANDS/: index.html
CONFIGURATION/: index.html
DOCKER_ARCHITECTURE/: index.html
FAQ/: index.html
HARDWARE-RECOMMENDATIONS/: index.html
SECURITY/: index.html
STARTUP_WALKTHROUGH/: index.html
TESTING/: index.html
TROUBLESHOOTING/: index.html
WINDOWS_REMOTE_INSTALL_LOG/: index.html
config/: qdrant.yaml  windows-remote.yml.example
docs/: ARCHITECTURE.md  CI_CD.md  SECURITY.md  TESTING.md  WINDOWS_REMOTE_INSTALL_LOG.md  index.md
scripts/: deploy.sh  generate-qdrant-certs.sh  run-discord-e2e-tests.sh  run-integration-tests.sh  setup.sh  validate-ci.sh  verify-windows-host.ps1
search/: search_index.json
src/secureclaw/: __main__.py  config.py  logging.py  main.py
src/zetherion_ai/: __init__.py  (+4 more)
tests/: conftest.py  test_agent_core.py  test_bot.py  test_config.py  test_qdrant.py  test_router.py  test_router_factory.py  test_security.py
(+59 files in other folders)
